EPMRPP-44722 PostgreSQL: Remove the records from ES in case suites of the launch/es are deleted